2003-11-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/cyrsasl.erl: Updated SASL authentification
	* src/ejabberd_c2s.erl: Likewise

	* src/ejabberd_sm.erl: Better resource handling

	* src/jlib.hrl: Added NS_BIND macros

2003-11-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_configure2.erl: Added reporting of outgoing S2S
	connections number

	* src/mod_disco.erl (get_outgoing_s2s): Minor fix

2003-11-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_configure2.erl: Yet another configure interface (not
	completed yet)

2003-11-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_last.erl: Added remove_user/1 function

	* src/mod_configure.erl: Removing of user's stuff moved to
	ejabberd_auth
	* src/ejabberd_auth.erl: Likewise

2003-10-31  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/mod_irc_connection.erl: Updated to work more
	correctly with latest jlib

2003-10-30  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: More strong check for authentificated JID

	* src/mod_roster.erl: Bugfix

2003-10-29  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_listener.erl: Fixed starting of SSL connection

	* src/ejabberd_s2s_in.erl: Partially rewriten

	* src/ejabberd_router.erl: More verbose error report
	* src/ejabberd_local.erl: Likewise
	* src/ejabberd_sm.erl: Likewise

	* src/ejabberd_s2s_out.erl: Updated to be compatible with R9C

	* src/ejabberd_c2s.erl: Minor fix

2003-10-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_listener.erl: Added handling of accept errors,
	added timeout value to ssl:accept

	* src/mod_vcard.erl: Added checks for all empty input fields

	* src/mod_offline.erl: More strong checks for stored packets

	* src/ejabberd_sm.erl: Bugfix

2003-10-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_auth.erl: Minor change in check_password/4

	* src/mod_roster.erl: Workaround for PSI bug with roster

	* src/ejabberd_logger_h.erl: Added support for log rotation
