@@ -1,3 +1,10 @@
+2003-11-09  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_sm.erl: Bugfix for previous resource handling
+	change
+
+	* src/mod_configure.erl: Password changing now implemented
+
 2003-11-07  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/cyrsasl.erl: Updated SASL authentification
